--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Gemfile
 Gemfile.lock
 node_modules
 package.json
+/.idea/.gitignore
+/.idea/juanmendes.github.io.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
